[project]
name = "mcp-gradio-client"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.7"
dependencies = [
    "gradio",
    "langchain",
    "langchain-openai",
    "langgraph",
    "mcp",  # Adjust version as needed
    "pydantic",
    "jsonschema-pydantic",
    "aiosqlite",
    "python-dotenv",

]
